TES-737 Fixed issue with trailing slash